# shot2issue

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/shot2issue/: __init__.py  backends.py  cli.py  github.py  prompt.py  render.py  sample.py  schema.py
src/shot2issue/fixtures/: mock_issue.json
tests/: conftest.py  test_backends.py  test_cli.py  test_github.py  test_render.py  test_schema.py
